# solis-kernel

./: Cargo.toml  LICENSE  README.md  linker.ld
.cargo/: config.toml
doc/: CONTRIBUTING
src/: kernel.rs  limine.rs  main.rs  memory.rs
