[package]
name = "ignis"
description = "The kernel for the Sigil operating system"
authors = ["Sigil development team"]
version = "0.1.0"
edition = "2024"
build = "build/script.rs"

[[bin]]
path = "src/main.rs"
name = "ignis.skn"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true

[dependencies]